--- a/CaseStudy.html
+++ b/CaseStudy.html
@@ -22,6 +22,9 @@
         width: 100%;
         height: 50px;
         background-color: lightgray;
+        display: inline-block;
+        font-size: 150%;
+        padding: 20px;
         text-align: center;
      }
      .main2{
